# simple_sc_example

./: .gitignore  README.md  simple.cpp
cmake_example/: .gitignore  CMakeLists.txt  source.me
makefile_example/: .gitignore  Makefile
